--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,7 +1,8 @@
 header{
     width: 100%;
+    display: flex;
     background-color: yellowgreen;
-    margin: 0;
+    margin-bottom: 2%;
     padding: 0;
     box-sizing: border-box;
     height: 50px;
