--- a/src/Components/ToDo.css
+++ b/src/Components/ToDo.css
@@ -1,3 +1,11 @@
 .completed{
     text-decoration: line-through;
 }
+
+.css-et1ao3-MuiTypography-root{
+    width: 90%
+}
+
+.noEvents{
+    pointer-events: none;
+}
