--- a/src/Components/ToDoList.css
+++ b/src/Components/ToDoList.css
@@ -6,7 +6,7 @@
     padding-inline:  3% !important;
     padding-bottom: 4% !important;
     box-shadow: 0 10px 20px rgb(0 0 0 / 19%), 0 6px 6px rgb(0 0 0 / 23%);
-    border-radius: 0.45em
+    border-radius: 0.45em;
 }
 
 .listTitle{
@@ -18,13 +18,15 @@
 }
 
 .listTitle input {
-    width: 70%;
-    font-size: 1.4em;
+    width: 65%;
+    font-size: 1.5em;
     font-weight: bold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .buttonContainer{
-    margin-right: 5%
+    margin-right: 3%;
+    width: 20%;
 }
 
 .buttonContainer :last-child {
